# iBoot64Patcher

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml  linux-bootstrap.sh  linux-build.sh  linux-post.sh  mac-bootstrap.sh  mac-build.sh  mac-post.sh  main.yml
iBoot64Patcher/: main.cpp
src/: main.cpp
